# dat205

./: README.md
optix-examples/: CMakeLists.txt  NVIDIA-OptiX-SDK-samples.html
optix-examples/cuda/: phong.cu
optix-examples/data/: optixMDLDisplacement.mdl  optixMDLExpressions.mdl
optix-examples/mdl_wrapper/: CMakeLists.txt  mdl_helper.cpp  mdl_helper.h  mdl_wrapper.cpp  neuray_loader.h
optix-examples/optixBuffersOfBuffers/: CMakeLists.txt  optixBuffersOfBuffers.cpp  optixBuffersOfBuffers.cu  pinhole_camera.cu  sphere_texcoord.cu
optix-examples/optixCallablePrograms/: CMakeLists.txt  optixCallablePrograms.cpp  optixCallablePrograms.cu
optix-examples/optixConsole/: CMakeLists.txt  checker.cu  optixConsole.cpp  optixConsole.vcproj
optix-examples/optixDenoiser/: CMakeLists.txt  optixDenoiser.cpp  optixDenoiser.cu
optix-examples/optixDeviceQuery/: CMakeLists.txt  optixDeviceQuery.cpp
optix-examples/optixDynamicGeometry/: CMakeLists.txt  optixDynamicGeometry.cpp
optix-examples/optixHello/: CMakeLists.txt  draw_color.cu  optixHello.cpp
optix-examples/optixInstancing/: CMakeLists.txt  optixInstancing.cpp
optix-examples/optixMDLDisplacement/: CMakeLists.txt  geometry_programs.cu  materials.cu  mdl_textures.cu  optixMDLDisplacement.cpp
optix-examples/optixMDLExpressions/: CMakeLists.txt  camera.cu  mdl_material.cu  optixMDLExpressions.cpp  parallelogram_tangent.cu  sphere_texcoord_tangent.cu
optix-examples/optixMDLSphere/: CMakeLists.txt  camera.cu  mdl_ibl.cu  optixMDLSphere.cpp  shared_structs.h
optix-examples/optixMeshViewer/: CMakeLists.txt  optixMeshViewer.cpp
optix-examples/optixMotionBlur/: CMakeLists.txt  accum_camera_mblur.cu  constantbg.cu  normal_shader.cu  normal_shader_with_shadows.cu  optixMotionBlur.cpp  triangle_mesh_mblur.cu
optix-examples/optixParticles/: CMakeLists.txt  accum_camera.cu  optixParticles.cpp  particles_geometry.cu  particles_material.cu
optix-examples/optixPathTracer/: CMakeLists.txt  optixPathTracer.cpp  optixPathTracer.cu
optix-examples/optixPrimitiveIndexOffsets/: CMakeLists.txt  optixPrimitiveIndexOffsets.cpp
optix-examples/optixProgressiveVCA/: CMakeLists.txt  ambocc.cu  camera.cu  optixProgressiveVCA.cpp
optix-examples/optixRaycasting/: CMakeLists.txt  Common.h  OptiXRaycastingContext.cpp  OptiXRaycastingContext.cu  OptiXRaycastingContext.h  optixRaycasting.cpp  optixRaycastingKernels.cu  optixRaycastingKernels.h
optix-examples/optixSelector/: CMakeLists.txt  checkerboard.cu  optixSelector.cpp  selector_example.cu
optix-examples/optixSphere/: CMakeLists.txt  optixSphere.cpp
optix-examples/optixSpherePP/: CMakeLists.txt  optixSpherePP.cpp
optix-examples/optixTextureSampler/: CMakeLists.txt  draw_texture.cu  optixTextureSampler.cpp
optix-examples/optixTutorial/: CMakeLists.txt  box.cu  optixTutorial.cpp  tutorial.h  tutorial0.cu  tutorial1.cu  tutorial10.cu  tutorial11.cu  tutorial2.cu  tutorial3.cu  tutorial4.cu  tutorial5.cu  tutorial6.cu  tutorial7.cu  tutorial8.cu  tutorial9.cu
optix-examples/optixWhitted/: CMakeLists.txt  glass.cu  optixWhitted.cpp  sphere.cu  sphere_shell.cu
optix-examples/primeInstancing/: CMakeLists.txt  primeInstancing.cpp
optix-examples/primeMasking/: CMakeLists.txt  primeCommon.h  primeMasking.cpp
optix-examples/primeMultiBuffering/: CMakeLists.txt  primeCommon.cpp  primeMultiBuffering.cpp
optix-examples/primeMultiGpu/: CMakeLists.txt  primeMultiGpu.cpp  primeMultiGpuKernels.cu
optix-examples/primeSimple/: CMakeLists.txt  primeKernels.cu  primeSimple.cpp
optix-examples/primeSimplePP/: CMakeLists.txt  primeSimplePP.cpp
optix-examples/support/mdl-sdk/include/mi/neuraylib/: target_code_types.h
optix-examples/support/mdl_wrapper/include/: mdl_wrapper.h
optix-examples/sutil/: HDRLoader.cpp  Mesh.cpp  PPMLoader.cpp  sutil.h
optix/src/: CMakeLists.txt  sampleConfig.h.in
optix/src/CMake/: FindOptiX.cmake
optix/src/cuda/: triangle_mesh.cu
optix/src/putil/: Preprocessor.h
optix/src/scene1/: CMakeLists.txt  optixHello.cpp
optix/src/scene2/: CMakeLists.txt  app.cpp  app.h  main.cpp
optix/src/scene2/res/: exception.cu  raygeneration.cu  rt_function.h
optix/src/sutil/: Arcball.cpp  CMakeLists.txt  OptiXMesh.cpp  sutil.cpp  sutil.h
src/: CMakeLists.txt
src/CMake/: FindOptiX.cmake
src/dat205/: CMakeLists.txt
src/dat205-water/: CMakeLists.txt
src/dat205-water/include/: app.hpp  camera.hpp
src/dat205-water/shaders/cuda/: any_hit.cu  closest_hit.cu  common.cuh  exception.cu  miss.cu  water_rendering.cu  water_simulation.cu
src/dat205-water/shaders/glsl/: output.frag  output.vert
src/dat205-water/src/app/: background.cpp  base.cpp  io.cpp  optix_rendering.cpp  optix_scene.cpp  water_simulation.cpp  window_and_gui.cpp
src/dat205-water/src/util/: opengl.cpp  optix.cpp  window.cpp
src/dat205/include/: app.hpp  camera.hpp  game.hpp  optix_util.hpp  window.hpp
src/dat205/include/opengl/: shader.hpp  util.hpp
src/dat205/include/util/: opengl.hpp  optix.hpp  window.hpp
src/dat205/shaders/cuda/: any_hit.cu  boundingbox_triangle_indexed.cu  closest_hit.cu  closesthit.cu  common.cuh  exception.cu  intersection_triangle_indexed.cu  miss.cu  ray_generation.cu  raygen.cu
src/dat205/shaders/glsl/: output.frag  output.vert  test.vert
src/dat205/src/: Plane.cpp  Sphere.cpp  app.cpp  camera.cpp  cuboid.cpp  game.cpp  main.cpp  optix_util.cpp  plane.cpp  sphere.cpp  window.cpp
src/dat205/src/app/: background.cpp  base.cpp  io.cpp  optix_rendering.cpp  optix_scene.cpp  window_and_gui.cpp
src/dat205/src/opengl/: shader.cpp  util.cpp
src/dat205/src/util/: opengl.cpp  optix.cpp  window.cpp
